--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -11,7 +11,7 @@
     width: 140px;
     height: 50px;
     font-weight: 600;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     margin: 40px auto 0;
     border-radius: 30px;
   }
@@ -22,7 +22,7 @@
     width: 100%;
     height: 100%;
     border: 3px solid black;
-    font-size: 1.6rem;
+    font-size: 1rem;
     transition: all 250ms ease-out;
   }
   
@@ -38,5 +38,8 @@
     border-bottom: 3px solid black;
     border-top: 3px solid black;
     background-color: gray;
+  }
+  .reset{
+    font-size: 1rem;
   }
   
