--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -19,9 +19,8 @@
   .count-container__button {
     color: black;
     background-color: grey;
-    width: 100%;
-    height: 100%;
     border: 3px solid black;
+    border-radius: 25px;
     font-size: 1rem;
     transition: all 250ms ease-out;
   }
@@ -35,11 +34,9 @@
     height: 100%;
     padding-top: 10px;
     color: black;
-    border-bottom: 3px solid black;
-    border-top: 3px solid black;
-    background-color: gray;
   }
   .reset{
     font-size: 1rem;
+    border-radius: 25px;
   }
   
